--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
         "@mui/material": "^5.15.15",
         "localforage": "^1.10.0",
         "match-sorter": "^6.3.4",
+        "prop-types": "^15.8.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-helmet": "^6.1.0",
         "react-icons": "^5.0.1",
         "react-router-dom": "^6.22.3",
         "react-toastify": "^10.0.5",
